:memo: Add README.md

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="face">
+      <div class="ears ear-left"></div>
+      <div class="ears ear-right"></div>
       <div class="eyes">
         <div class="eye-left">
           <div class="point"></div>
